<resources>
    <string name="app_name">Resident Tracking</string>

    <string name="title_section1">Resident List</string>
    <string name="title_section2">Location List</string>
    <string name="title_section3">Map List</string>
    <string name="title_section4">Alert List</string>
    <string name="title_section5">Nearest Resident</string>
    <string name="title_section6">Profile</string>
    <string name="title_section7">Change Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Refresh</string>


    <string name="action_refresh">Refresh</string>
    <string name="action_locations">View locations list</string>
    <string name="LocationActivity">Location</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Enter resident name &#8230;</string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_fragment_resident">Residents</string>
    <string name="title_fragment_location">Location List</string>
    <string name="title_fragment_map">Map</string>
    <string name="title_fragment_alert">Alerts</string>
    <string name="title_fragment_neasrest_resident">Nearest Resident</string>
    <string name="title_fragment_profile">My Profile</string>
    <string name="title_fragment_change">Change Password</string>

    <string name="title_activity_resident">Resident</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_alert">Alert</string>

    <string name="loading_title">Processing Data &#8230;</string>
    <string name="loading_message">Please Wait</string>
    <string name="title_activity_alert_dialog">AlertDialogActivity</string>

    <string name="ic_sos">Alert image</string>
    <string name="logout">Logout</string>
    <string name="alerts_alert_profile_picture">Resident\'s profile picture</string>
    <string name="btn_take_care">Take care</string>
    <string name="alerts_alert_ongoing_alerts">Ongoing alerts (%1$d)</string>
    <string name="alerts_alert_solved_alerts">Solved alerts (%1$d)</string>
    <string name="alert_title">%1$s %2$s</string>
    <string name="alerts_ongoing_alerts_only">Hide Solved Alerts</string>
    <string name="backbutton_exit_warning">Please click BACK again to exit</string>
    <string name="quota">To live well, live long and with peace of mind</string>
    <string name="resident_profile_picture_description">Profile picture</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="nric">NRIC</string>
    <string name="birthday">Birthday</string>
    <string name="remark">Remark</string>
    <string name="map">Map</string>
    <string name="alert_history">Alert History</string>
    <string name="next_of_kin">Next Of Kin</string>
    <string name="alert_type_went_out_of_ward">Went out of ward</string>
    <string name="alert_type_press_alarm_button">Press the alarm button</string>
    <string name="alert_type_is_out_of_tracking">Is out of tracking</string>
    <string name="error_unknown_server_error">Whoops server error. Please try again.</string>
</resources>
